# boston-housing-ML

./: ML_modelization.ipynb  README.md  eda_life_exp.ipynb  eda_note.md  online_casino.ipynb  pyproject.toml
